feat: dockerize app, remove redundant code, and update port to 9001

--- a/.env.example
+++ b/.env.example
@@ -12,4 +12,5 @@ FROM_NAME=My Company
 # ─── App Settings ─────────────────────────────────────────────────────────────
 
 PROFILES_FILE=profiles.json
-API_KEY=
+HOST=127.0.0.1
+PORT=9001
