chore: formatting and minor updates

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ SMTP_USER=you@yourcompany.com
 SMTP_PASSWORD=your-app-password
 FROM_EMAIL=you@yourcompany.com
 FROM_NAME=My Company
+VERIFY_SSL=true
 
 # ─── App Settings ─────────────────────────────────────────────────────────────
 
